--- a/src/styles/custom/elements/catalog.styl
+++ b/src/styles/custom/elements/catalog.styl
@@ -58,10 +58,16 @@
 		line-height 2em
 		font-weight 600
 		a
-			display block
 			color inherit
+			display block
 			&:hover
 				font-weight bold
+		.main-link
+			position absolute
+			left 0
+			right 0
+			top 0
+			bottom 0
 		.links
 			position absolute
 			top 50%
