--- a/src/styles/custom/elements/partners.styl
+++ b/src/styles/custom/elements/partners.styl
@@ -54,8 +54,11 @@
 			white-space nowrap
 			background $brand-primary
 			color $white
-			padding 12px 15px
+			padding 10px 15px
 			font-size 17px
 			text-align center
+			transition 350ms
 			&:hover
 				text-decoration none
+				background  #df3400
+				box-shadow inset 3px 0 0 #c82f00
