--- a/src/templates/base/base.jade
+++ b/src/templates/base/base.jade
@@ -85,9 +85,9 @@ html(lang='en')
 							.footer-info__mail
 								.description E-mail:
 								.mail
-									a(href="") complex-tech@mail.ru
+									a(href="mailto:complex-tech@mail.ru") complex-tech@mail.ru
 									br
-									a(href="") complextech@complextech.ru
+									a(href="mailto:complextech@complextech.ru") complextech@complextech.ru
 						.col-md-4.hidden-xs.hidden-sm
 							.footer-info__branding
 								.name ООО "Комплекс технологий"
