--- a/src/templates/catalog.jade
+++ b/src/templates/catalog.jade
@@ -21,7 +21,7 @@ block content
 					.catalog__links
 						- var rnd = Math.random();
 						- if (rnd < 0.5){
-							a(href="") Ссылка на каталог
+							a(href="").main-link Ссылка на каталог
 							.links
 								a(href="")
 									+lipsum(2, "words")
