--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -83,7 +83,7 @@ block content
 				h2.title.title__h2.title__h2--center Наши клиенты
 			mixin client()
 				.col-xs-6.col-sm-4.col-md-4.col-lg-2
-					a(href="").clients__item
+					.clients__item
 						img(src="images/client__logo.png")
 			+client()
 			+client()
