--- a/src/templates/innercatalog.jade
+++ b/src/templates/innercatalog.jade
@@ -74,41 +74,56 @@ block content
 							tbody
 								tr
 									td(data-label="Имя колонки 1")
-										+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
+										span
+											+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
 									td(data-label="Колонка 2")
-										+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
+										span
+											+lipsum(Math.floor(Math.random() * 7 ) + 1, "words")
 									td(data-label="Название колонки  3")
-										+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
+										span
+											+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
 									td(data-label="Имя колонки  4")
-										+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
+										span
+											+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
 									td(data-label="Имя колонки  5")
-										+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
+										span
+											+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
 									td
 										button Подробнее
 								tr
 									td(data-label="Имя колонки 1")
-										+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
+										span
+											+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
 									td(data-label="Колонка 2")
-										+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
+										span
+											+lipsum(Math.floor(Math.random() * 7 ) + 1, "words")
 									td(data-label="Название колонки  3")
-										+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
+										span
+											+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
 									td(data-label="Имя колонки  4")
-										+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
+										span
+											+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
 									td(data-label="Имя колонки  5")
-										+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
+										span
+											+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
 									td
 										button Подробнее
 								tr
 									td(data-label="Имя колонки 1")
-										+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
+										span
+											+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
 									td(data-label="Колонка 2")
-										+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
+										span
+											+lipsum(Math.floor(Math.random() * 7 ) + 1, "words")
 									td(data-label="Название колонки  3")
-										+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
+										span
+											+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
 									td(data-label="Имя колонки  4")
-										+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
+										span
+											+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
 									td(data-label="Имя колонки  5")
-										+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
+										span
+											+lipsum(Math.floor(Math.random() * 2 ) + 1, "words")
 									td
 										button Подробнее
 				+item()
