--- a/src/styles/custom/elements/block-news.styl
+++ b/src/styles/custom/elements/block-news.styl
@@ -7,9 +7,13 @@
 		right 15px
 		font-size 16px
 		text-decoration none
-		border-bottom 1px dashed $brand-primary
+		color #1d212b
+		border-bottom 1px dashed currentColor
+		transition 350ms
 		&:hover
 			text-decoration none
+			color $brand-primary
+			border-color currentColor
 		@media screen and (min-width: $screen-sm)
 			font-size 18px
 		@media screen and (min-width: $screen-md)
