--- a/src/styles/custom/elements/production.styl
+++ b/src/styles/custom/elements/production.styl
@@ -6,9 +6,13 @@
 		top 45px
 		font-size 16px
 		text-decoration none
-		border-bottom 1px dashed $brand-primary
+		color #1d212b
+		border-bottom 1px dashed currentColor
+		transition 350ms
 		&:hover
 			text-decoration none
+			color $brand-primary
+			border-color currentColor
 		@media screen and (min-width: $screen-sm)
 			font-size 18px
 		@media screen and (min-width: $screen-md)
