Contacts page (partial)

--- a/src/styles/custom/elements/typo.styl
+++ b/src/styles/custom/elements/typo.styl
@@ -33,3 +33,11 @@
 				margin-bottom 15px
 		&--cropped
 			max-width 75%
+
+h3
+	font-size 15px
+	font-weight bold
+	@media screen and (min-width: $screen-sm)
+		font-size 18px
+	@media screen and (min-width: $screen-md)
+		font-size 21px
