--- a/src/templates/spisok.jade
+++ b/src/templates/spisok.jade
@@ -6,7 +6,9 @@ a(href="innercatalog.html") Каталог внутренняя
 br
 a(href="product.html") Продукт
 br
-a(href="")
+a(href="contacts.html") Контакты
+br
+a(href="partners.html") Партнеры
 br
 a(href="")
 br
