--- a/src/styles/custom/main.styl
+++ b/src/styles/custom/main.styl
@@ -12,7 +12,7 @@
 
 @import "elements/slider"
 @import "elements/production"
-@import "elements/partners"
+@import "elements/partners-index"
 @import "elements/clients"
 @import "elements/block-about"
 @import "elements/block-news"
@@ -21,3 +21,5 @@
 @import "elements/catalog"
 @import "elements/innercatalog"
 @import "elements/employee"
+@import "elements/page-form"
+@import "elements/partners"
