--- a/src/styles/custom/elements/partners.styl
+++ b/src/styles/custom/elements/partners.styl
@@ -1,64 +1,33 @@
 .partners
-	&__wrapper
-		position relative
-		@media screen and (max-width: $screen-xs-max)
-			> *:nth-child(n+5):not(:last-child)
-				display none
-		@media screen and (max-width: $screen-sm-max)
-			> *:nth-child(n+7):not(:last-child)
-				display none
-
+	margin-left -5px
+	margin-right -5px
 	&__item
-		width 100%
-		height 115px
+		float left
 		background #f5f5f5
+		width 50%
+		height 95px
+		border 5px solid $white
 		position relative
-		margin 15px 0
 		img
+			filter grayscale(1)
+			opacity 0.25
+			transition-property filter, opacity
+			transition-duration 350ms
 			position absolute
 			left 50%
 			top 50%
 			transform translate(-50%, -50%)
-
-
-	&__info
-		background $white
-		position absolute
-		left 50%
-		top 50%
-		transform translate(-50%,-50%)
-		padding 27px 20px
-		box-shadow 0 0 7px 5px $gray-lighter
-		display flex
-		flex-wrap wrap
-		width 60%
-		justify-content center
-		@media screen and (min-width: $screen-sm)
-			flex-wrap nowrap
-			width 600px
-			justify-content space-between
-		.text
-			flex 1 1 340px
-			font-size 17px
-			cursor default
-			text-align center
-			margin-bottom 10px
-			@media screen and (min-width: $screen-sm)
-				text-align left
-				flex 0 0 340px
-				margin-bottom 0
-		a
-			flex 0 0 180px
-			height 46px
-			display block
-			white-space nowrap
-			background $brand-primary
-			color $white
-			padding 10px 15px
-			font-size 17px
-			text-align center
-			transition 350ms
-			&:hover
-				text-decoration none
-				background  #df3400
-				box-shadow inset 3px 0 0 #c82f00
+		&:hover
+		&:focus
+			img
+				filter grayscale(0)
+				opacity 1
+		@media screen and (min-width: $screen-xs) and (max-width: $screen-sm-max)
+			width (100% / 3)
+			height 95px
+		@media screen and (min-width: $screen-md) and (max-width: $screen-md-max)
+			width 25%
+			height 95px
+		@media screen and (min-width: $screen-lg)
+			width 20%
+			height 95px
