--- a/src/styles/custom/elements/page-form.styl
+++ b/src/styles/custom/elements/page-form.styl
@@ -3,7 +3,10 @@
 	border-radius 5px
 	padding 25px
 	background #f5f5f5
-	margin-top 23px
+	margin 23px 0
+	@media screen and (min-width: $screen-md)
+		position relative
+		top -63px
 	&:after
 		display table
 		content ""
