--- a/src/templates/partners.jade
+++ b/src/templates/partners.jade
@@ -10,10 +10,25 @@ block content
 	.container
 		.row
 
-			.col-xs-12.col-md-8
+			.col-xs-12
+				h2.title.title__h2.title__h2--inner Партнеры
+
+			.col-xs-12.col-md-4.col-md-push-8
+				form.page-form
+					.page-form__title.text-center Заказать запчасть
+					input.page-form__input.page-form__input--text(name="name", placeholder="Ваше имя")
+					input.page-form__input.page-form__input--text(name="mail", placeholder="Ваша почта")
+					input.page-form__input.page-form__input--text(name="phone", placeholder="Ваш телефон")
+					span.page-form__text Перечень запчастей
+					input.page-form__input.page-form__input--text(name="article-1", placeholder="Артикул")
+					input.page-form__input.page-form__input--text(name="article-2", placeholder="Артикул")
+					a(href="").page-form__add-element
+						i.fa.fa-plus-square
+						span Добавить еще
+					button.page-form__button Отправить
+
+			.col-xs-12.col-md-8.col-md-pull-4
 				.row
-					.col-xs-12
-						h2.title.title__h2.title__h2--inner Партнеры
 				.partners
 					mixin partners()
 						.partners__item
@@ -21,17 +36,3 @@ block content
 					-for(var i = 0; i < 12; i++){
 						+partners()
 					-}
-
-			.col-xs-12.col-md-4
-				form.page-form
-					.page-form__title.text-center Заказать запчасть
-					input.page-form__input.page-form__input--text(placeholder="Ваше имя")
-					input.page-form__input.page-form__input--text(placeholder="Ваша почта")
-					input.page-form__input.page-form__input--text(placeholder="Ваш телефон")
-					span.page-form__text Перечень запчастей
-					input.page-form__input.page-form__input--text(placeholder="Артикул")
-					input.page-form__input.page-form__input--text(placeholder="Артикул")
-					a(href="").page-form__add-element
-						i.fa.fa-plus-square
-						span Добавить еще
-					button.page-form__button Отправить
