--- a/src/styles/custom/elements/innercatalog.styl
+++ b/src/styles/custom/elements/innercatalog.styl
@@ -147,6 +147,8 @@
 			width 100%
 			margin-top 20px
 			button
+			a
+				display block
 				width 90px
 				color #1e2227
 				border 1px solid currentColor
@@ -160,6 +162,7 @@
 					background $brand-primary
 					border-color $brand-primary
 					color $white
+					text-decoration none
 		@media screen and (min-width: $screen-sm)
 			table
 				border-collapse separate
@@ -180,6 +183,7 @@
 						padding 3px
 						width 96px
 				button
+				a
 					width 90px
 					color #1e2227
 					border 1px solid currentColor
@@ -222,6 +226,7 @@
 					display block
 					margin-left 52%
 			button
+			a
 				margin-left 52%
 			thead
 				display none
