--- a/src/templates/catalog.jade
+++ b/src/templates/catalog.jade
@@ -15,7 +15,7 @@ block content
 			mixin catalog_item()
 				.catalog__item
 					a(href="")
-						img(src="images/production__item.jpg")
+						img(src="images/production__item.jpg" alt="")
 						.text
 							+lipsum(Math.floor(Math.random() * 3 + 1), "words")
 					.catalog__links
