--- a/src/templates/contacts.jade
+++ b/src/templates/contacts.jade
@@ -33,7 +33,7 @@ block content
 						.col-xs-12.col-md-6.employees
 							.employee
 								.employee__image
-									img(src="http://dummyimage.com/67x67/000000/fff&text=employee")
+									img(src="http://dummyimage.com/67x67/000000/fff&text=employee" alt="")
 								.employee__text
 									.position
 										+lipsum(Math.ceil(Math.random() * 6 + 3),"words")
@@ -66,4 +66,4 @@ block content
 
 
 	.map
-		img(src="http://dummyimage.com/1920x300/00ff51/ffffff&text=Place+for+map")
+		img(src="http://dummyimage.com/1920x300/00ff51/ffffff&text=Place+for+map" alt="")
