--- a/src/templates/partners.jade
+++ b/src/templates/partners.jade
@@ -32,7 +32,7 @@ block content
 				.partners
 					mixin partners()
 						.partners__item
-							img(src="images/partner__logo--small.png")
+							img(src="images/partner__logo--small.png" alt="")
 					-for(var i = 0; i < 12; i++){
 						+partners()
 					-}
