--- a/src/templates/product.jade
+++ b/src/templates/product.jade
@@ -18,14 +18,14 @@ block content
 				.product__presence.product__presence--aviable Товар в наличии
 				.product__image
 					.big
-						img(src="http://dummyimage.com/570x460/0f0/fff")
+						img(src="http://dummyimage.com/570x460/0f0/fff" alt="")
 					.small
 						a(href="" data-url="http://dummyimage.com/570x460/0f0/fff")
-							img(src="http://dummyimage.com/180x120/0f0/fff")
+							img(src="http://dummyimage.com/180x120/0f0/fff" alt="")
 						a(href="" data-url="http://dummyimage.com/570x460/f00/fff")
-							img(src="http://dummyimage.com/180x120/f00/fff")
+							img(src="http://dummyimage.com/180x120/f00/fff" alt="")
 						a(href="" data-url="http://dummyimage.com/570x460/00f/fff")
-							img(src="http://dummyimage.com/180x120/00f/fff")
+							img(src="http://dummyimage.com/180x120/00f/fff" alt="")
 				ul.nav.nav-tabs.product__tabs
 					li(role="presentation").active
 						a(href="#description" aria-controls="description" role="tab" data-toggle="tab") Характеристики
