Offer page (first version)

--- a/src/templates/elements/head.jade
+++ b/src/templates/elements/head.jade
@@ -2,5 +2,10 @@ head
 	meta(charset='utf-8')
 	meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, minimal-ui')
 
+	link(rel="shortcut icon" href="images/favicon.ico" type="image/x-icon")
+
 	title Project title
 
+
+	style
+		include ../../../tmp/critical.css
