--- a/src/styles/custom/elements/product.styl
+++ b/src/styles/custom/elements/product.styl
@@ -225,6 +225,7 @@
 			font-weight bold
 			color #646464
 			transition 150ms
+			height 50px
 			@media screen and (max-width: $screen-xs)
 				padding 14px 7px
 			@media screen and (min-width: $screen-md) and (max-width: $screen-md-max)
