--- a/src/styles/custom/main.styl
+++ b/src/styles/custom/main.styl
@@ -23,5 +23,4 @@
 @import "elements/employee"
 @import "elements/page-form"
 @import "elements/partners"
-
-//@import "elements/offer"
+@import "elements/popup"
