--- a/src/styles/custom/main.styl
+++ b/src/styles/custom/main.styl
@@ -23,4 +23,5 @@
 @import "elements/employee"
 @import "elements/page-form"
 @import "elements/partners"
+@import "elements/gratitude"
 @import "elements/popup"
