News feed and single post

--- a/src/styles/custom/elements/common.styl
+++ b/src/styles/custom/elements/common.styl
@@ -71,7 +71,9 @@ footer
 // Pagination
 .pagination
 	margin 20px 0 40px
-	> li
+	display table
+	clear both
+ 	> li
 		> a
 		> span
 			border-color #e5e5e5
