--- a/src/styles/custom/main.styl
+++ b/src/styles/custom/main.styl
@@ -24,4 +24,8 @@
 @import "elements/page-form"
 @import "elements/partners"
 @import "elements/gratitude"
+@import "elements/images"
 @import "elements/popup"
+@import "elements/post"
+@import "elements/data"
+@import "elements/news"
