Catalog link fix

--- a/src/styles/custom/elements/catalog.styl
+++ b/src/styles/custom/elements/catalog.styl
@@ -74,6 +74,19 @@
 			left 0
 			right 0
 			transform translateY(-50%)
+		.single-link
+			position absolute
+			left 0
+			top 0
+			right 0
+			bottom 0
+			span
+				position absolute
+				top 50%
+				left 0
+				right 0
+				transform translateY(-50%)
+
 
 	&__item:hover
 		.catalog__links
