--- a/src/templates/catalog.jade
+++ b/src/templates/catalog.jade
@@ -33,8 +33,8 @@ block content
 									+lipsum(2, "words")
 						-}
 						-else{
-							.links
-								a(href="") Каталог >4 пунктов
+							a(href="").single-link
+								span Каталог >4 пунктов
 						-}
 						.corners.corners--top
 						.corners.corners--bottom
